done hidden all card

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <i>Trong thời gian quy định người chơi cần lật hết mặt thẻ lên. </i>
         <i> Để thắng trò chơi người chơi cần lật các thẻ bài bằng cách click 1 thẻ bài để lật lên trong thời gian quy
           định.</i>
-        <i> Click thẻ bài tiếp theo, nếu khớp với thẻ trước đó thì đúng, nếu sai thì lật úp cả hai thẻ vừa click. </i>
+        <i> Click thẻ bài tiếp theo, nếu khớp với thẻ trước đó thì đúng, nếu sai thì lật úp cả thẻ vừa click. </i>
         <i> Nếu đã hiểu ấn vào chơi nay thôi!!</i>
     </p>
   </div>
