--- a/index2.html
+++ b/index2.html
@@ -17,7 +17,7 @@
   </header>
   <div class="w3-container flex-container game-container">
     <div class="main">
-      <span>23</span>
+      
       <div class="  w3-row " id="tags">
         
       </div>
@@ -26,13 +26,13 @@
 
 
   <div id="loss" class="overlay-text">
-    <div class="w3-display-middle">Bạn đã thua ấn để chơi lại <button onclick="a()"> choi lai</button></div>
+    <div class="w3-display-middle" >Bạn đã thua ấn để chơi lại <button class="_button"  onclick="b()"> Chơi Lại</button></div>
 
   </div>
 
   <div id="win" class="overlay-text">
 
-    <div class="w3-display-middle">Bạn đã thắng ấn để chơi lại <button class="w3-col m3"> choi lai</button></div>
+    <div class="w3-display-middle">Bạn đã thắng ấn để chơi lại <button class="_button" onclick="confirm()"> Chơi lại </button></div>
   </div>
   </div>
 
